--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,10 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "scurrypy"
-version = "0.2.0"
+version = "0.2.2"
 
 description = "Discord API Wrapper in Python"
+readme = "README.md"
 authors = [{ name = "Furmissile" }]
 requires-python = ">=3.10"
 dependencies = []
