--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,9 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "scurrypy"
-version = "0.3.4.3"
+version = "0.4"
 
-description = "Discord API Wrapper in Python"
+description = "Dataclass-driven Discord API Wrapper in Python"
 readme = "README.md"
 authors = [{ name = "Furmissile" }]
 requires-python = ">=3.10"
