--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -66,7 +66,6 @@ plugins:
             members_order: source
             filters:
               - "!from_dict"
-              - "!type"
               - "!^_"
 
 watch:
@@ -84,6 +83,7 @@ nav:
     - Commands: api/commands.md
     - UI Components: api/ui_components.md
     - Components: api/components.md
+    - Channel: api/channel.md
     - Message: api/message.md
     - Models: api/models.md
     - Role: api/role.md
