--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "scurrypy"
-version = "0.5"
+version = "0.5.2"
 
 description = "Dataclass-driven Discord API Wrapper in Python"
 readme = "README.md"
@@ -14,10 +14,10 @@ dependencies = []
 
 [tool.setuptools]
 packages = [
-  "discord",
-  "discord.dispatch",
-  "discord.events",
-  "discord.models",
-  "discord.resources",
-  "discord.parts"
+  "scurrypy",
+  "scurrypy.dispatch",
+  "scurrypy.events",
+  "scurrypy.models",
+  "scurrypy.resources",
+  "scurrypy.parts"
 ]
