--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,13 +4,16 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "scurrypy"
-version = "0.6.2"
+version = "0.6.3"
 
 description = "Dataclass-driven Discord API Wrapper in Python"
 readme = "README.md"
 authors = [{ name = "Furmissile" }]
 requires-python = ">=3.10"
-dependencies = []
+dependencies = [
+  "aiohttp>=3.8.0",
+  "websockets>=11.0.0"
+]
 
 [tool.setuptools]
 packages = [
