--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -33,6 +33,8 @@ repo_url: https://github.com/Furmissile/scurrypy
 markdown_extensions:
   - pymdownx.superfences
   - admonition
+  - tables
+  - md_in_html
   - toc:
       permalink: true
 
@@ -74,6 +76,7 @@ nav:
   - Examples: examples.md
   - Advanced Examples: advanced_examples.md
   - Legacy Examples: legacy_examples.md
+  - Technical Writeup: technical_writeup.md
   - API Reference:
     - Overview: api/index.md
     - Client: api/client.md
